# pm-internship-engine

./: .editorconfig  .env.development  .env.example  .env.production  .gitignore  DESIGN_PLAN.md  LICENSE  Makefile  README.md  TYPE_CHECK_ERRORS_REPORT.md
.claude/: launch.json
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: admin.py  allocation.py  auth.py  candidates.py  matching.py  notifications.py  opportunities.py  router.py
backend/app/core/: config.py  database.py  events.py  exceptions.py  security.py
backend/app/ml/: __init__.py  evaluation.py  model_registry.py
backend/app/ml/embeddings/: __init__.py  embedding_generator.py  vector_store.py
backend/app/ml/fairness/: __init__.py  fairness_metrics.py  guardrails.py  policy_engine.py
backend/app/ml/feature_engineering/: feature_extractor.py  skill_taxonomy.py  text_processor.py
backend/app/ml/matching/: matching_pipeline.py
backend/app/ml/ranking/: __init__.py  explainer.py  heuristic_scorer.py  ml_ranker.py  optimizer.py  reranker.py
backend/app/models/: __init__.py  allocation.py  allocation_cycle.py  audit_log.py  base.py  candidate.py  match.py  notification.py  opportunity.py  user.py  waitlist.py
backend/app/modules/allocation_module/: __init__.py
backend/app/modules/analytics_module/: __init__.py
backend/app/modules/audit_module/: __init__.py
backend/app/modules/candidate_module/: __init__.py
backend/app/modules/fairness_module/: __init__.py
backend/app/modules/identity_module/: __init__.py
backend/app/modules/matching_module/: __init__.py
backend/app/modules/notification_module/: __init__.py
backend/app/modules/opportunity_module/: __init__.py
backend/app/modules/rules_module/: __init__.py
backend/app/schemas/: __init__.py  allocation.py  candidate.py  common.py  match.py  opportunity.py  user.py
backend/app/services/: __init__.py  allocation_service.py  eligibility_service.py  fairness_service.py  matching_service.py  notification_service.py  search_service.py
backend/tests/: conftest.py
backend/tests/unit/: test_evaluation.py  test_explainer.py  test_fairness_metrics.py  test_guardrails.py  test_optimizer.py  test_policy_engine.py  test_reranker.py
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  FAIRNESS_POLICY.md
frontend/: frontend_errors.txt  next.config.ts  package-lock.json  package.json  (+2 more)
(+217 files in other folders)
